--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test:unit": "vitest",
+    "test:bench": "vitest bench"
   },
   "dependencies": {
     "vue": "^3.2.45"
