--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:bench": "vitest bench"
+    "test:bench": "vitest bench",
+    "test:shuffle": "vitest  --sequence.shuffle"
   },
   "dependencies": {
     "vue": "^3.2.45"
